@@ -1,22 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<tryton>
-    <data>
-        <record model="ir.ui.view" id="invoice_view_form">
-            <field name="model">account.invoice</field>
-            <field name="type">form</field>
-            <field name="inherit" ref="account_invoice.invoice_view_form"/>
-            <field name="arch" type="xml">
-                <![CDATA[
-                <data>
-                    <xpath
-                        expr="/form/notebook/page/group/group/group/button[@name=&quot;%(account_invoice.wizard_pay)d&quot;]"
-                        position="replace">
-                    </xpath>
-                </data>
-                ]]>
-            </field>
-        </record>
-    </data>
-</tryton>
